--- a/front/index.html
+++ b/front/index.html
@@ -6,6 +6,10 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+  integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
+  crossorigin="anonymous"></script>
   <!--/My edits -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,6 +24,7 @@
   <!-- Custom styles for this template -->
   <link href="css/the-big-picture.css" rel="stylesheet">
 
+
 </head>
 
 <body>
@@ -32,10 +37,10 @@
                 <div class="col-lg-12">
                     <div class="row">
                         <div class="col-lg-3 col-md-3 col-sm-12 p-0">
-                            <input type="text" class="form-control search-slt" placeholder="Enter City">
+                            <input type="text" class="form-control search-slt" placeholder="Enter City" id="address">
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-12 p-0">
-                            <button type="button" class="btn btn-danger wrn-btn">Analyze</button>
+                            <button type="button" class="btn btn-danger wrn-btn" id="analyze">Analyze</button>
                         </div>
                     </div>
                 </div>
@@ -45,11 +50,18 @@
   </section>
   <!--My edits -->
 
+  <script>
+  
+      document.getElementById('analyze').addEventListener('click', function() {
+        window.location.href = "/?address=" + escape( $("#address").val());
+      })
+  
+    </script>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-bottom">
     <div class="container">
-      <a class="navbar-brand" href="#">Street Smart</a>
+      <a class="navbar-brand" href="#"><img src="/static/streetsmart.png" style='height:50px;'></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -76,11 +88,14 @@
 
   <!-- Page Content -->
   <section>
+    
+      {{folium|safe}}
     <div class="container">
+
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-12">
           <h1 class="mt-5">The Big Picture</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptates rerum eveniet sapiente repellat esse, doloremque quod recusandae deleniti nostrum assumenda vel beatae sed aut modi nesciunt porro quisquam voluptatem.</p>
+          <!-- <p>{{ title }} Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptates rerum eveniet sapiente repellat esse, doloremque quod recusandae deleniti nostrum assumenda vel beatae sed aut modi nesciunt porro quisquam voluptatem.</p> -->
         </div>
       </div>
     </div>
