--- a/front/index.html
+++ b/front/index.html
@@ -16,7 +16,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>The Big Picture - Start Bootstrap Template</title>
+  <title>StreetSmart</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-  
+
   <!--My edits -->
   <section class="search-sec">
     <div class="container">
@@ -51,11 +51,11 @@
   <!--My edits -->
 
   <script>
-  
+
       document.getElementById('analyze').addEventListener('click', function() {
         window.location.href = "/?address=" + escape( $("#address").val());
       })
-  
+
     </script>
 
   <!-- Navigation -->
@@ -88,13 +88,14 @@
 
   <!-- Page Content -->
   <section>
-    
+
       {{folium|safe}}
     <div class="container">
 
       <div class="row">
         <div class="col-lg-12">
-          <h1 class="mt-5">The Big Picture</h1>
+          <h1 class="mt-5">Street Smart</h1>
+          <h2> Improvement of up to {{best_improvement}}% per road </h2>
           <!-- <p>{{ title }} Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptates rerum eveniet sapiente repellat esse, doloremque quod recusandae deleniti nostrum assumenda vel beatae sed aut modi nesciunt porro quisquam voluptatem.</p> -->
         </div>
       </div>
